[package]
name = "IKnow"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.75"
crossterm = "0.27.0"
ratatui = "0.25.0"
regex = "1.10.2"
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde = "1.0.193"
serde_json = "1.0.108"
tokio = { version = "1.0.0", features = ["full"] }
log = "0.4.20"
